@@ -25,7 +25,7 @@
  *			   University of Maryland at College Park
  */
 /*
- * $Id: conffile.c,v 1.156.2.3 2006/11/01 14:45:40 martinea Exp $
+ * $Id: conffile.c,v 1.156.2.4 2006/11/07 12:00:22 martinea Exp $
  *
  * read configuration file
  */
@@ -513,9 +513,13 @@ validate_chunksize(
 	val->v.am64 = ((AM64_MAX / 1024) - (2 * DISK_BLOCK_KB));
     }
     else if(val->v.am64 < 0) {
-	conf_parserror("Negative chunksize (%lld) is no longer supported", val->v.am64);
+	conf_parserror("Negative chunksize (%lld) is no longer supported",
+		       val->v.am64);
     }
     val->v.am64 = am_floor(val->v.am64, (off_t)DISK_BLOCK_KB);
+    if (val->v.am64 < 2*DISK_BLOCK_KB) {
+	conf_parserror("chunksize must be at least %dkb", 2*DISK_BLOCK_KB);
+    }
 }
 
 void
